[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "automodpack-autotest"
version = "0.1.0"
description = "Docker-first in-game integration tests for AutoModpack"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
]

[project.scripts]
autotester = "automodpack_autotester.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["automodpack_autotester*"]
